Refactor APIs to be RESTful (use query params for filtering)
